	  for pointer arithmetric

	Other:
	* rngd.h, rngd.c, rngd_linux.c: precalculate poll timeout
	  on init_kernel_rng.  Now arguments->poll_timeout is an int
	  instead of a double
	* rngd.c, rngtest.c: switch from sscanf to strto* functions for
	  better error handling.  Validate upper bounds of input
	  parameters when needed (to avoid overflows)
	* rngd.c, rngd_linux.c: obtain kernel entropy pool size from
	  /proc, and implement percentage-based --fill-watermark.
	  Switch default fill watermark from 2048 bits to 50%
	* rngd.8.in: Add comment about not changing entropy pool size
	  with rngd running
	* rngd.c, rngd_entsource.h, rngd_entsource.c, rngd_linux.h,
	  rngd_linux.c: remove arguments to init_* functions, since they
	  serve no useful purpose (as the modules they init access
	  the arguments struct for other data anyway)
	* rngd.c: call openlog with LOG_PID option

Tue May 09 2004  Henrique de Moraes Holschuh <hmh@debian.org>

	* rngd.h, rngd.c, rngd_linux.c, rngd.8.in: Let the user
	  set the fill watermark explicitly, using the new -W
	  command line option.  This gets rid of RNDGETPOOL
	  usage, and of a hardcoded (yuck) setting of 50%.
	  This change will make rngd work right with 2.6 kernels.

Thu Apr 15 2004  Jeff Garzik  <jgarzik@pobox.com>

	* Makefile.am, configure.ac: put common code in a lib

Tue Apr  6 2004  Henrique de Moraes Holschuh <hmh@debian.org>

	* rngd.c, rngtest.c: Add Copyright and license notices
	  to --version output, as per the GNU guidelines;
	  Improve --help output a little.
	* rngtest.c: Cleanup logging, and exit with status 1
	  when input drains before the first block is tested.
	* rngtest.1.in: Minor text change.

	Preparatory cleanup for merging the multithreaded 
	code later:
	* rngd.c: split globals to rngd.h; split linux
	  /dev/random functionality to rngd_linux.c;
	  split entropy source (/dev/hwrandom) functionality
	  to rngd_entsource.c.
	* rngd.h, rngd_linux.h, rngd_linux.c,