@@ -17,7 +17,7 @@ dnl You should have received a copy of the GNU General Public License
 dnl along with this program; if not, write to the Free Software
 dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-AC_INIT(rng-tools, 2-unofficial-mt.4, [rng-tools@packages.debian.org])
+AC_INIT(rng-tools, 2-unofficial-mt.5, [rng-tools@packages.debian.org])
 AC_PREREQ(2.57)
 AC_CONFIG_SRCDIR([rngd.c])
 AM_INIT_AUTOMAKE([gnu])
